Adding check in and check out data to the report. Next add images

--- a/AttendanceApp/XML Templates/index.html
+++ b/AttendanceApp/XML Templates/index.html
@@ -104,12 +104,10 @@
                     <tr class="heading">
                         <td> Employee Name </td>
                         <td> Check In</td>
-<!--                        <td> Signature </td>-->
                         <td> Check Out</td>
-<!--                        <td> Signature </td>-->
-<!--                        <td> Working Hours </td>-->
-                        <td> <br>
-                        </td>
+                        <td> IN_Signature </td>
+                        <td> OUT_Signature </td>
+                        <td><br></td>
                     </tr>
                      #ITEMS#
                 </tbody>
