--- a/AttendanceApp/XML Templates/single_item.html
+++ b/AttendanceApp/XML Templates/single_item.html
@@ -2,6 +2,7 @@
     <td>#ITEM_NAME#</td>
     <td>#CHECKIN_TIME#</td>
     <td>#CHECKOUT_TIME#</td>
- 
+    <td>#IN_SIGNATURE#</td>
+    <td>#OUT_SIGNATURE#</td>
 </tr>
 
