--- a/AttendanceApp/XMLTemplates/index.html
+++ b/AttendanceApp/XMLTemplates/index.html
@@ -90,11 +90,15 @@
             </head>
     <body>
         <div class="invoice-box">
+            <h2>  
+                Employee Attendance Report
+            </h2>
             <table cellpadding="0" cellspacing="0">
                 <tbody>
                     <tr class="top">
                         <td colspan="3" class="title"> <img src="#LOGO_IMAGE#" style="width:50%; max-width:50px;">
                             </td>
+                     
                         <td colspan="3"  class="date">
                             #INVOICE_DATE#<br>
                           </td>
