add work time property to Employee object, and create csv file with work time

--- a/AttendanceApp/XMLTemplates/index.html
+++ b/AttendanceApp/XMLTemplates/index.html
@@ -110,6 +110,7 @@
                         <td> Check Out</td>
                         <td class="signatureSize"> IN_Signature </td>
                         <td> OUT_Signature </td>
+                        <td> Working Hours </td>
                         <td><br></td>
                     </tr>
                      #ITEMS#
